<resources>
    <string name="app_name">baby care</string>
    <string name="welcome">Welcome To baby care</string>
    <string name="welcome_sub_txt">Mature alongside your little one as they navigate the journey of growing up.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to">Sign in to continue</string>
    <string name="username_or_password">Username Or Email</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="already_have_account">Already have an account? </string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="create_an_account">Create an account to [app name] to get all features</string>
    <string name="select_child">Select Child</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--   nav items-->
    <string name="home">Home</string>
    <string name="children">Children</string>
    <string name="activities">Activities</string>
    <string name="growth_charts">Growth Charts</string>
    <string name="diaper">Diaper</string>
    <string name="feeding">Feeding</string>
    <string name="healthcare">Healthcare</string>
    <string name="notes">Notes</string>
    <string name="details">Details</string>
    <string name="sleeping">Sleeping</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open navigation bar</string>
    <string name="close_nav">Close navigation bar</string>
    <string name="daily_program">Daily Program</string>
    <string name="remaining_activities">5 activities have been completed, and 3 are still remaining</string>
    <string name="completed">Completed</string>
    <string name="tips">Tips</string>
    <string name="learn_more">Learn more</string>
    <string name="activity_log">Activity log</string>
    <string name="see_all">See All</string>
    <string name="add_child">Add Child</string>
    <string name="name">Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search..</string>
    <string name="all">All</string>
    <string name="done">Done</string>
    <string name="undone">Undone</string>
    <string name="label">Label</string>
    <string name="date">Date</string>
    <string name="quantity">Quantity</string>
    <string name="type">Type</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="awakenings">Awakenings</string>


    <string-array name="growth_options">
        <item>Weight</item>
        <item>Height</item>
    </string-array>


</resources>