<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_add_child"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jost_semi_bold"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:text="@string/add_child"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inp_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_person"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/txt_add_child">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inp_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_calendar"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/birthdate"
        app:layout_constraintTop_toBottomOf="@+id/inp_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_date"
            android:maxLength="30"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inp_weight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_weight"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/weight"
        app:suffixText="kg"
        app:layout_constraintTop_toBottomOf="@+id/inp_date">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_weight"
            android:maxLength="6"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inp_height"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_height"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/height"
        app:suffixText="cm"
        app:layout_constraintTop_toBottomOf="@+id/inp_weight">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_height"
            android:maxLength="3"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txt_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jost_medium"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_height" />

    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_gender"
        app:layout_constraintStart_toEndOf="@+id/txt_gender"
        app:layout_constraintTop_toTopOf="@+id/txt_gender">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary"
            android:text="@string/boy" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioGirl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:buttonTint="@color/primary"
            android:text="@string/girl" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_gender"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/jost_bold"
        android:background="@drawable/solid_btn"
        android:text="@string/add"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/primary"
        android:fontFamily="@font/jost_bold"
        android:background="@drawable/border_btn"
        app:layout_constraintTop_toTopOf="@+id/btn_add"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        android:layout_marginEnd="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>